# urirun-connector-camera-web

./: README.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
examples/: README.md
scripts/: ci_urirun_llm_smoke.py
tests/: test_camera_web.py  test_contract.py
urirun_connector_camera_web/: __init__.py  connector.manifest.json  contracts.json  core.py  server.py
